--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=Tienda
 server.port = 80
+
+logging.pattern.dateformat = hh:mm
+spring.main.banner-mode=off
+
+spring.thymeleaf.cache=false
+
+
