--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 .vscode/
 /src/main/resources/static/videos/torpedo.mp4
 /src/main/resources/static/audios/musica.mp3
+/src/main/resources/firebase/techshop-d6ed1-firebase-adminsdk-29spw-9c0cd8db38.json
